Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3659,8 +3659,8 @@ input, select, textarea {
     }
 
     .skill {
-        width: 60px;
-        height: 60px;
+        width: 76px;
+        height: 70px;
         margin: 10px;
     }
 
@@ -3734,8 +3734,8 @@ input, select, textarea {
     }
 
     .skill {
-        width: 60px;
-        height: 60px;
+        width: 76px;
+        height: 70px;
         margin: 10px;
     }
 
@@ -3809,8 +3809,8 @@ input, select, textarea {
     }
 
     .skill {
-        width: 60px;
-        height: 60px;
+        width: 76px;
+        height: 70px;
         margin: 5px;
     }
 
